--- a/index.html
+++ b/index.html
@@ -17,9 +17,13 @@
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     <!-- CUSTOM CSS -->
     <link rel="stylesheet" href="./index.css">
+
+    <link rel="icon" type="image/png" href="./assets/SJ_logo.png">
+
 </head>
 <body>
 
+    
     
     <!--========================== TOP NAV BAR  =============================-->
     <nav>
