fixied my rusme

--- a/index.html
+++ b/index.html
@@ -135,8 +135,11 @@
                     <div class="home__data">
                         <h1 class="home__title">Hi, I'm Shooq</h1>
                         <h3 class="home__subtitle">Software developer</h3>
-                        <p class="home__description">High level experience in web design and development
-                            knowledge, producing quality work.</p>
+                        <p class="home__description">Passionate software developer 
+                            with hands-on experience in building responsive,
+                            user-focused websites and applications. Dedicated 
+                            to delivering high-quality, scalable solutions.</p>
+
                         <a href="./assets/pdf/ShooqJanahi_Resume.pdf" download class="button button--flex">
                             Download My Resume <i class="uil uil-file-download button__icon"></i>
                         </a>
