adding QR to origonal resume

--- a/projects.html
+++ b/projects.html
@@ -73,5 +73,13 @@
 
   <!-- JS -->
   <script src="assets/js/main.js"></script>
+
+   <!-- Auto-open PDF -->
+  <script>
+    window.addEventListener('load', function () {
+      window.open('assets/pdf/Shooq_Janahi_Resume.pdf', '_blank');
+    });
+  </script>
+
 </body>
 </html>
