added photonest demo link'

--- a/index.html
+++ b/index.html
@@ -984,10 +984,10 @@
                                 <a href="https://onedrive.live.com/?id=FA653E8D72B308DF!s7fcc0141fc6b48218afc77433d3adeaa&resid=FA653E8D72B308DF!s7fcc0141fc6b48218afc77433d3adeaa&cid=fa653e8d72b308df&ithint=folder&redeem=aHR0cHM6Ly8xZHJ2Lm1zL2YvYy9mYTY1M2U4ZDcyYjMwOGRmL0VrRUJ6SDlyX0NGSWl2eDNRejA2M3FvQnMwUXlxeWkyR1RUWUwtLTJIX0NwMmc_ZT1EZ1hrdDY&migratedtospo=true"
                                     class="portfolio__see-more">See more</a>
                             </p>
-                            <a href="https://github.com/ShooqJanahi/PhotoNest" target="_blank"
+                            <a href="https://photonest-a16aa.web.app/" target="_blank"
                                 class="button button--flex button--small portfolio__button">
-                                GitHub
-                                <i class="uil uil-github-alt button__icon"></i>
+                                Demo
+                                <i class="uil uil-play button__icon"></i>
                             </a>
 
                         </div>
