added new certificate

--- a/index.html
+++ b/index.html
@@ -615,6 +615,29 @@
                     </div>
 
                     <div class="qualification__content" data-content id="certification">
+
+                          <!--one miltion promptors-->
+                        
+                        <div class="qualification__data">
+                            <div>
+                                <h3 class="qualification__title">One Million Prompters</h3>
+                                <span class="qualification__subtitle">DUBAI FUTURE FOUNDATION</span>
+                                <div class="qualification__calendar">
+                                    <i class="uil uil-calendar-alt"></i>
+                                  Issued July 2025
+                                </div>
+                                <a href="https://omp.dub.ai/certificate/oqmNLulYzgvR#" target="_blank" class="qualification__credential">
+                                    <i class="uil uil-external-link-alt"></i> Show credential
+                                </a>
+                                
+                            </div>
+                            <div>
+                                <span class="qualification__rounder"></span>
+                                <span class="qualification__line"></span>
+                            </div>
+                        </div>
+
+
                        <!--Complete Web Development Course-->
                          <div class="qualification__data">
                             <div></div>
