added the need work experionce in iga

--- a/Resume.html
+++ b/Resume.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>My Projects</title>
+  <title>My CV</title>
 
   <!--==================== UNICONS ====================-->
   <link rel="stylesheet" href="https://unicons.iconscout.com/release/v3.0.6/css/line.css" />
@@ -23,7 +23,7 @@
   <!--==================== MAIN ====================-->
   <main class="main">
     <section class="portfolio section" id="projects">
-      <h2 class="section__title">My Resume</h2>
+      <h2 class="section__title">My CV</h2>
       <span class="section__subtitle">All the cool things I've Done</span>
 
       <div class="portfolio__container container grid">
@@ -32,8 +32,8 @@
 
       <!-- PDF Fallback Download Button -->
       <div class="portfolio__resume-download" style="text-align:center; margin-top: 2rem;">
-        <p>If the resume doesn't open automatically, you can download it below:</p>
-        <a href="assets/pdf/Shooq_Janahi_Resume.pdf" download class="button button--flex">
+        <p>If the CV doesn't open automatically, you can download it below:</p>
+        <a href="assets/pdf/ShooqJanahi_CV.pdf" download class="button button--flex">
           Download Resume <i class="uil uil-download-alt button__icon"></i>
         </a>
       </div>
