--- a/index.html
+++ b/index.html
@@ -140,8 +140,8 @@
                             user-focused websites and applications. Dedicated 
                             to delivering high-quality, scalable solutions.</p>
 
-                        <a href="./assets/pdf/ShooqJanahi_Resume.pdf" download class="button button--flex">
-                            Download My Resume <i class="uil uil-file-download button__icon"></i>
+                        <a href="./assets/pdf/Shooq_Janahi_CV.pdf" download class="button button--flex">
+                            Download My CV <i class="uil uil-file-download button__icon"></i>
                         </a>
 
 
@@ -169,11 +169,12 @@
 
                 <div class="about__data">
                     <p class="about__description">
-                        I am a passionate programmer with a solid foundation in software development and hands-on
-                        experience as a Registry Assistant.
-                        My strengths lie in data management, problem-solving, and effective communication. I thrive in
-                        collaborative environments
-                        where I can contribute my technical expertise while continuously learning and growing.
+                       I’m a passionate and motivated programmer with hands-on experience in software development, particularly 
+                       in building and maintaining projects using C# and SQL Server. I thrive in collaborative environments where I 
+                       can contribute technical solutions, improve systems, and learn from others. My strengths include problem-solving, 
+                       data management, and clear communication. I’m committed to continuous growth and aim to make a meaningful impact by 
+                       delivering innovative and practical tech-driven solutions.
+
                     </p>
 
                     <div class="about__info">
@@ -188,9 +189,10 @@
                         </div>
 
                         <div>
-                            <span class="about__info-title">2</span>
-                            <span class="about__info-name">Internships <br> completed</span>
+                            <span class="about__info-title">3</span>
+                            <span class="about__info-name">Work <br> Experience</span>
                         </div>
+
                     </div>
 
                     <!--==================== Change your CV 
@@ -556,8 +558,31 @@
 
                     </div>
 
+
+
                     <!--=============== QUALIFICATION CONTENT 2 ===============-->
                     <div class="qualification__content" data-content id="work">
+
+              <div class="qualification__data">
+    <div></div>
+
+    <div>
+        <span class="qualification__rounder"></span>
+        <span class="qualification__line"></span>
+    </div>
+
+    <div>
+        <h3 class="qualification__title">Technical Trainee</h3>
+        <span class="qualification__subtitle">Information & eGovernment Authority</span>
+        <div class="qualification__calendar">
+            <i class="uil uil-calendar-alt"></i>
+            Jul 2025 - Present
+        </div>
+    </div>
+</div>
+
+
+
                         <!--=============== QUALIFICATION 1 ===============-->
                         <div class="qualification__data">
                             <div>
