updated job title

--- a/index.html
+++ b/index.html
@@ -563,23 +563,23 @@
                     <!--=============== QUALIFICATION CONTENT 2 ===============-->
                     <div class="qualification__content" data-content id="work">
 
-              <div class="qualification__data">
-    <div></div>
+                    <div class="qualification__data">
+                            <div></div>
 
-    <div>
-        <span class="qualification__rounder"></span>
-        <span class="qualification__line"></span>
-    </div>
+                            <div>
+                                <span class="qualification__rounder"></span>
+                                <span class="qualification__line"></span>
+                            </div>
 
-    <div>
-        <h3 class="qualification__title">Technical Trainee</h3>
-        <span class="qualification__subtitle">Information & eGovernment Authority</span>
-        <div class="qualification__calendar">
-            <i class="uil uil-calendar-alt"></i>
-            Jul 2025 - Present
-        </div>
-    </div>
-</div>
+                            <div>
+                                <h3 class="qualification__title">Software Developer</h3>
+                                <span class="qualification__subtitle">Information & eGovernment Authority</span>
+                                <div class="qualification__calendar">
+                                    <i class="uil uil-calendar-alt"></i>
+                                    Jul 2025 - Present
+                                </div>
+                            </div>
+                        </div>
 
 
 
