--- a/index.html
+++ b/index.html
@@ -572,7 +572,7 @@
                             </div>
 
                             <div>
-                                <h3 class="qualification__title">Software Developer</h3>
+                                <h3 class="qualification__title">System Developer</h3>
                                 <span class="qualification__subtitle">Information & eGovernment Authority</span>
                                 <div class="qualification__calendar">
                                     <i class="uil uil-calendar-alt"></i>
