--- a/index.html
+++ b/index.html
@@ -126,8 +126,8 @@
                                         Insert your image in the Img folder and Change your image |
                                         Center your image with X: horizontal, Y: vertical 
                                     ====================-->
-                                <image class="home__blob-img" x="12" y="18"
-                                    href="./assets/img/ProfilePic_Transparent.png" />
+                                <!--<image class="home__blob-img" x="12" y="18"
+                                    href="./assets/img/ProfilePic_Transparent.png" /> -->
                             </g>
                         </svg>
                     </div>
@@ -165,7 +165,7 @@
             <span class="section__subtitle">My introduction</span>
 
             <div class="about__container container grid">
-                <img src="./assets/img/ProfilePic.jpg" alt="Shooq Janahi" class="about__img">
+               <!-- <img src="./assets/img/ProfilePic.jpg" alt="Shooq Janahi" class="about__img"> -->
 
                 <div class="about__data">
                     <p class="about__description">
