--- a/index.html
+++ b/index.html
@@ -297,6 +297,19 @@
                                 </div>
                             </div>
 
+                            <div class="skills__data">
+                                <div class="skills__titles">
+                                    <h3 class="skills__name">Angular</h3>
+                                    <span class="skills__number">85%</span>
+                                </div>
+                                <div class="skills__bar">
+                                    <span class="skills__percentage skills__angular"></span>
+                                </div>
+                            </div>
+
+
+
+
                         </div>
                     </div>
 
@@ -615,7 +628,7 @@
                             </div>
 
                             <div>
-                                <h3 class="qualification__title">System Developer</h3>
+                                <h3 class="qualification__title">Government System Developer Trainee</h3>
                                 <span class="qualification__subtitle">Information & eGovernment Authority</span>
                                 <div class="qualification__calendar">
                                     <i class="uil uil-calendar-alt"></i>
@@ -683,6 +696,27 @@
                     </div>
 
                     <div class="qualification__content" data-content id="certification">
+
+                            <!--SOFTWARE ENGINEERING (SOFTWARE ARCHITECTURE FOR BIG DATA) L2-->
+                             <div class="qualification__data">
+                            <div></div>
+                            <div>
+                                <span class="qualification__rounder"></span>
+                                <span class="qualification__line"></span>
+                            </div>
+                            <div>
+                                <h3 class="qualification__title">SOFTWARE ENGINEERING (SOFTWARE ARCHITECTURE FOR BIG DATA) L2</h3>
+                                <span class="qualification__subtitle">Coursera</span>
+                                <div class="qualification__calendar">
+                                    <i class="uil uil-calendar-alt"></i>
+                                    Issued April 2025
+                                </div>
+                                <a href="https://www.coursera.org//account/accomplishments/badge/LpKYuwrIRV6SmLsKyHVe9g" target="_blank" class="qualification__credential">
+                                    <i class="uil uil-external-link-alt"></i> Show credential
+                                </a>
+                                
+                            </div>
+                        </div>
 
                           <!--one miltion promptors-->
                         
