--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                       
 
                       <li class="nav__item">
-                        <a href="#projects" class="nav__link">
+                        <a href="projects.html"class="nav__link">
                             <i class="uil uil-scenery nav__icon"></i> Projects
                         </a>
                     </li>
