--- a/projects.html
+++ b/projects.html
@@ -21,24 +21,58 @@
 </a>
 
 
-<div class="nav__menu" id="nav-menu">
-<ul class="nav__list grid">
-<li class="nav__item"><a href="index.html#home" class="nav__link"><i class="uil uil-estate nav__icon"></i> Home</a></li>
-<li class="nav__item"><a href="index.html#about" class="nav__link"><i class="uil uil-user nav__icon"></i> About</a></li>
-<li class="nav__item"><a href="index.html#skills" class="nav__link"><i class="uil uil-file-alt nav__icon"></i> Skills</a></li>
-<li class="nav__item"><a href="index.html#qualification" class="nav__link"><i class="uil uil-graduation-cap nav__icon"></i> Qualification</a></li>
-<li class="nav__item"><a href="projects.html" class="nav__link active-link"><i class="uil uil-scenery nav__icon"></i> Projects</a></li>
-<li class="nav__item"><a href="index.html#contact" class="nav__link"><i class="uil uil-message nav__icon"></i> Contact Me</a></li>
-</ul>
-<i class="uil uil-times nav__close" id="nav-close"></i>
-</div>
 
+        <div class="nav__menu" id="nav-menu">
+            <ul class="nav__list grid">
+                <li class="nav__item">
+                    <a href="index.html#home" class="nav__link">
+                        <i class="uil uil-estate nav__icon"></i> Home
+                    </a>
+                </li>
 
-<div class="nav__btns">
-<i class="uil uil-moon change-theme" id="theme-button"></i>
-<div class="nav__toggle" id="nav-toggle"><i class="uil uil-apps"></i></div>
-</div>
-</nav>
+                <li class="nav__item">
+                    <a href="index.html#about" class="nav__link">
+                        <i class="uil uil-user nav__icon"></i> About
+                    </a>
+                </li>
+
+                <li class="nav__item">
+                    <a href="index.html#skills" class="nav__link">
+                        <i class="uil uil-file-alt nav__icon"></i> Skills
+                    </a>
+                </li>
+
+                <li class="nav__item">
+                    <a href="index.html#qualification" class="nav__link">
+                        <i class="uil uil-graduation-cap nav__icon"></i> Qualification
+                    </a>
+                </li>
+
+                <li class="nav__item">
+                    <a href="projects.html" class="nav__link active-link">
+                        <i class="uil uil-scenery nav__icon"></i> Projects
+                    </a>
+                </li>
+
+                <li class="nav__item">
+                    <a href="index.html#contact" class="nav__link">
+                        <i class="uil uil-message nav__icon"></i> Contact Me
+                    </a>
+                </li>
+            </ul>
+
+            <i class="uil uil-times nav__close" id="nav-close"></i>
+        </div>
+
+        <div class="nav__btns">
+            <!-- Theme toggle -->
+            <i class="uil uil-moon change-theme" id="theme-button"></i>
+
+            <div class="nav__toggle" id="nav-toggle">
+                <i class="uil uil-apps"></i>
+            </div>
+        </div>
+    </nav>
 </header>
 
 
@@ -125,5 +159,7 @@
 <script src="assets/js/main.js"></script>
 <!-- Page script -->
 <script src="assets/js/projects.js"></script>
+<script src="assets/js/main.js"></script>
+
 </body>
 </html>
