--- a/index.html
+++ b/index.html
@@ -619,6 +619,27 @@
                     <!--=============== QUALIFICATION CONTENT 2 ===============-->
                     <div class="qualification__content" data-content id="work">
 
+
+
+                        <div class="qualification__data">
+                            <div>
+                                <h3 class="qualification__title">IT Service Desk Agent</h3>
+                                <span class="qualification__subtitle">Gulf Air Group (GFG)</span>
+                                <div class="qualification__calendar">
+                                    <i class="uil uil-calendar-alt"></i>
+                                    Dec 2025 - Present
+                                </div>
+                            </div>
+
+                            <div>
+                                <span class="qualification__rounder"></span>
+                                <span class="qualification__line"></span>
+                            </div>
+                        </div>
+
+
+
+
                     <div class="qualification__data">
                             <div></div>
 
@@ -632,7 +653,7 @@
                                 <span class="qualification__subtitle">Information & eGovernment Authority</span>
                                 <div class="qualification__calendar">
                                     <i class="uil uil-calendar-alt"></i>
-                                    Jul 2025 - Present
+                                    Jul 2025 - Nov 2025
                                 </div>
                             </div>
                         </div>
