--- a/projects.html
+++ b/projects.html
@@ -11,6 +11,8 @@
 <link rel="stylesheet" href="assets/css/styles.css" />
 <!-- Page-specific styles -->
 <link rel="stylesheet" href="assets/css/projects.css" />
+
+<link rel="icon" href="assets/img/SJ_logo.png" type="image/png">
 </head>
 <body>
 <!-- Reuse the same navbar as index.html -->
@@ -156,7 +158,7 @@
 
 <!-- Core scripts reused from index for nav/theme/swiper -->
 <script src="assets/js/swiper-bundle.min.js"></script>
-<script src="assets/js/main.js"></script>
+
 <!-- Page script -->
 <script src="assets/js/projects.js"></script>
 <script src="assets/js/main.js"></script>
