--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@
                             <div class="skills__data">
                                 <div class="skills__titles">
                                     <h3 class="skills__name">JavaScript</h3>
-                                    <span class="skills__number">86%</span>
+                                    <span class="skills__number">100%</span>
                                 </div>
                                 <div class="skills__bar">
                                     <span class="skills__percentage skills__js"></span>
@@ -280,7 +280,7 @@
                             <div class="skills__data">
                                 <div class="skills__titles">
                                     <h3 class="skills__name">Flutter </h3>
-                                    <span class="skills__number">60%</span>
+                                    <span class="skills__number">100%</span>
                                 </div>
                                 <div class="skills__bar">
                                     <span class="skills__percentage skills__Flutter"></span>
@@ -300,7 +300,7 @@
                             <div class="skills__data">
                                 <div class="skills__titles">
                                     <h3 class="skills__name">Angular</h3>
-                                    <span class="skills__number">85%</span>
+                                    <span class="skills__number">100%</span>
                                 </div>
                                 <div class="skills__bar">
                                     <span class="skills__percentage skills__angular"></span>
@@ -374,7 +374,7 @@
                                 <div class="skills__data">
                                     <div class="skills__titles">
                                         <h3 class="skills__name">Python</h3>
-                                        <span class="skills__number">40%</span>
+                                        <span class="skills__number">80%</span>
                                     </div>
                                     <div class="skills__bar">
                                         <span class="skills__percentage skills__python"></span>
@@ -623,7 +623,7 @@
 
                         <div class="qualification__data">
                             <div>
-                                <h3 class="qualification__title">IT Service Desk Agent</h3>
+                                <h3 class="qualification__title">IT Service Desk Analysis</h3>
                                 <span class="qualification__subtitle">Gulf Air Group (GFG)</span>
                                 <div class="qualification__calendar">
                                     <i class="uil uil-calendar-alt"></i>
@@ -1072,9 +1072,21 @@
         -->
 
         <!--==================== Projects ====================-->
-        <section class="portfolio section" id="projects">
-            <h2 class="section__title">Projects</h2>
-            <span class="section__subtitle">A collection of all my projects</span>
+      <section class="portfolio section" id="projects">
+        <div class="portfolio__header">
+            <h2 class="section__title">Featured Projects</h2>
+        </div>
+        <span class="section__subtitle">A selection of my favourite work</span>
+
+        <a href="projects.html" class="button button--link section__view-all">
+            View all projects
+            <i class="uil uil-arrow-right button__icon"></i>
+        </a>
+    </div>
+
+
+
+
 
             <div class="portfolio__container container swiper-container">
                 <div class="swiper-wrapper">
@@ -1245,33 +1257,7 @@
                         </div>
                     </div>
 
-                    <!--=============== PORTFOLIO 3 ===============-->
-                    <div class="portfolio__content grid swiper-slide">
-                        <img src="./assets/img/EA_logo.png" alt="" class="portfolio__img">
-
-                        <div class="portfolio__data">
-                            <h3 class="portfolio__title">
-                                Extinct Animal
-                            </h3>
-                            <p class="portfolio__description">
-                                This educational website was created to inform and
-                                 inspire users about extinct animals through
-                                  engaging, well-researched content. It features 
-                                  detailed species profiles with illustrations, 
-                                  behind-the-scenes development stories, and 
-                                  interactive elements to enhance the learning 
-                                  experience.
-
-                            </p>
-
-                            <a href="https://shooqjanahi.github.io/ExtinctAnimal/index.html" target="_blank"
-                                class="button button--flex button--small portfolio__button">
-                                Demo
-                                <i class="uil uil-play button__icon"></i>
-                            </a>
-
-                        </div>
-                    </div>
+                   
 
                 </div>
 
