--- a/projects.html
+++ b/projects.html
@@ -101,6 +101,8 @@
 
 <!-- Drawer for internal details -->
 <aside id="drawer" class="drawer" aria-hidden="true" role="dialog" aria-labelledby="drawerTitle">
+
+
 <div class="drawer__head">
 <h2 id="drawerTitle" class="drawer__title">Project</h2>
 <i id="drawerClose" class="uil uil-times drawer__close" aria-label="Close"></i>
@@ -131,6 +133,15 @@
 </section>
 </div>
 </aside>
+
+<!-- LIGHTBOX with arrows -->
+<div id="lightbox" class="lightbox" aria-hidden="true">
+  <button class="lightbox__arrow lightbox__prev" aria-label="Previous">❮</button>
+  <img id="lightboxImg" class="lightbox__img" alt="Preview" />
+  <button class="lightbox__arrow lightbox__next" aria-label="Next">❯</button>
+  <button id="lightboxClose" class="lightbox__close" aria-label="Close">✕</button>
+</div>
+
 
 
 <!-- ==================== FOOTER (same as index) ==================== -->
