--- a/index.html
+++ b/index.html
@@ -626,7 +626,7 @@
 
                         <div class="qualification__data">
                             <div>
-                                <h3 class="qualification__title">IT Service Desk Analysis</h3>
+                                <h3 class="qualification__title">IT Service Desk Analyst</h3>
                                 <span class="qualification__subtitle">Gulf Air Group (GFG)</span>
                                 <div class="qualification__calendar">
                                     <i class="uil uil-calendar-alt"></i>
