junior cyber certificate

--- a/index.html
+++ b/index.html
@@ -721,6 +721,47 @@
 
                     <div class="qualification__content" data-content id="certification">
 
+                        <!--Junior Cybersecurity Analyst Career Path-->
+                             <div class="qualification__data">
+                            <div></div>
+                            <div>
+                                <span class="qualification__rounder"></span>
+                                <span class="qualification__line"></span>
+                            </div>
+                            <div>
+                                <h3 class="qualification__title">Junior Cybersecurity Analyst Career Path</h3>
+                                <span class="qualification__subtitle">Cisco</span>
+                                <div class="qualification__calendar">
+                                    <i class="uil uil-calendar-alt"></i>
+                                    Issued January 2026
+                                </div>
+                                <a href="https://www.credly.com/earner/earned/badge/455a2ad6-de3a-4ee0-99dc-25eb38070611" target="_blank" class="qualification__credential">
+                                    <i class="uil uil-external-link-alt"></i> Show credential
+                                </a>
+                                
+                            </div>
+                        </div>
+
+                        <!--AWS Solutions Architect Trained -->
+                        <div class="qualification__data">
+                            <div>
+                                <h3 class="qualification__title">AWS Solutions Architect Trained </h3>
+                                <span class="qualification__subtitle">Bahrain Institute of Banking and Finance (BIBF)</span>
+                                <div class="qualification__calendar">
+                                    <i class="uil uil-calendar-alt"></i>
+                                  Issued November 2025
+                                </div>
+                                <a href="https://www.linkedin.com/in/shooqjanahi/overlay/1768398988879/single-media-viewer/?profileId=ACoAACzZFekBtScf_rGi5MLDymV9_duHZQaQ274" target="_blank" class="qualification__credential">
+                                    <i class="uil uil-external-link-alt"></i> Show credential
+                                </a>
+                                
+                            </div>
+                            <div>
+                                <span class="qualification__rounder"></span>
+                                <span class="qualification__line"></span>
+                            </div>
+                        </div>
+
                             <!--SOFTWARE ENGINEERING (SOFTWARE ARCHITECTURE FOR BIG DATA) L2-->
                              <div class="qualification__data">
                             <div></div>
